--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ textarea {
     appearance: none;
     width: 33px;
     height: 24px;
+    border: 0;
     background: url('https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/155/cheese-wedge_1f9c0.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -83,6 +84,7 @@ textarea {
 .slider::-moz-range-thumb {
     width: 33px;
     height: 24px;
+    border: 0;
     background: url('https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/155/cheese-wedge_1f9c0.png');
     cursor: pointer;
     background-size: contain;
